fix: overflow hidden

--- a/src/css/layout.scss
+++ b/src/css/layout.scss
@@ -1,7 +1,6 @@
 body,
 html {
 	max-width: 100vw;
-	overflow-x: hidden !important;
 	font-family: "Inter", sans-serif;
 }
 
